--- a/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/graph_view.html
+++ b/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/graph_view.html
@@ -7,20 +7,39 @@
       </div>
       <div class="panel-body">
         <div class="btn-group">
-          <button class="btn btn-default" id="showHierarchy">
+          <a
+            href="?mode=hierarchy"
+            class="btn {% if current_mode == 'hierarchy' %}btn-primary{% else %}btn-default{% endif %}"
+          >
             Vis komplett hierarki
-          </button>
-          <button class="btn btn-primary" id="showParents">Vis foreldre</button>
-          <button class="btn btn-default" id="showChildren">Vis barn</button>
+          </a>
+          <a
+            href="?mode=parents"
+            class="btn {% if current_mode == 'parents' %}btn-primary{% else %}btn-default{% endif %}"
+          >
+            Vis foreldre
+          </a>
+          <a
+            href="?mode=children"
+            class="btn {% if current_mode == 'children' %}btn-primary{% else %}btn-default{% endif %}"
+          >
+            Vis barn
+          </a>
         </div>
+
+        {% if current_mode == 'hierarchy' %}
         <div class="btn-group pull-right" id="depth-controls">
           <span class="btn btn-default disabled">Dybde:</span>
-          <button class="btn btn-default depth-btn" data-depth="1">1</button>
-          <button class="btn btn-default depth-btn active" data-depth="2">
-            2
-          </button>
-          <button class="btn btn-default depth-btn" data-depth="3">3</button>
+          {% for depth in depth_options %}
+          <a
+            href="?mode={{ current_mode }}&depth={{ depth }}"
+            class="btn {% if depth == current_depth %}btn-primary{% else %}btn-default{% endif %}"
+          >
+            {{ depth }}
+          </a>
+          {% endfor %}
         </div>
+        {% endif %}
       </div>
       <div
         id="connection-graph"
@@ -58,11 +77,19 @@
 <script src="https://d3js.org/d3.v6.min.js"></script>
 <script src="{% static '/js/graph_view.js' %}"></script>
 <script>
+  // Pass data directly from Django context to JavaScript
   document.addEventListener("DOMContentLoaded", function () {
+    // Use the pre-processed graph data from backend
+    const graphData = {{ graph_data|safe }};
+
+    // Initialize graph with pre-computed data
     initGraphView({
+      containerId: "connection-graph",
       connectionId: "{{ object.pk }}",
       connectionName: "{{ object }}",
       sambandsnummer: "{{ object.sambandsnummer }}",
+      precomputedData: graphData,
+      mode: "{{ current_mode }}",
     });
   });
 </script>
