Add map button to list view

--- a/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/samband_list.html
+++ b/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/samband_list.html
@@ -4,3 +4,10 @@
 
 {% block title %}Samband{% endblock %}
 
+
+{% block buttons %}
+    {{ block.super }}
+    <a href="{% url 'plugins:praksis_nhn_nautobot:docs' %}" class="btn btn-primary">
+        Map
+    </a>
+{% endblock buttons %}
