prøve å adde mine ting aka kart og sånn
	modified:   praksis_nhn_nautobot/tables.py
	modified:   praksis_nhn_nautobot/templates/praksis_nhn_nautobot/samband_list.html
	new file:   praksis_nhn_nautobot/templates/praksis_nhn_nautobot/samband_map.html
	new file:   praksis_nhn_nautobot/templates/praksis_nhn_nautobot/samband_map_all.html
	new file:   praksis_nhn_nautobot/templates/praksis_nhn_nautobot/samband_map_clientside.html
	modified:   praksis_nhn_nautobot/urls.py
	modified:   praksis_nhn_nautobot/views.py

--- a/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/samband_list.html
+++ b/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/samband_list.html
@@ -7,7 +7,7 @@
 
 {% block buttons %}
     {{ block.super }}
-    <a href="{% url 'plugins:praksis_nhn_nautobot:docs' %}" class="btn btn-primary">
+    <a href="{% url 'plugins:praksis_nhn_nautobot:samband_client_map' %}" class="btn btn-primary">
         Map
     </a>
 {% endblock buttons %}
