--- a/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/samband_map_clientside.html
+++ b/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/samband_map_clientside.html
@@ -158,6 +158,12 @@
     
     <!-- Map legend -->
     <div class="map-legend">
+      <div class="legend-header">
+        <span>View</span>
+        <button id="toggle-legend" class="btn btn-sm" title="Toggle legend visibility">
+          <i class="fas fa-chevron-up"></i>
+        </button>
+      </div>
       <div class="legend-title">Status</div>
       <div class="legend-item">
         <div class="legend-color" style="background-color: #4CAF50;"></div>
