--- a/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/single_samband_view.html
+++ b/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/single_samband_view.html
@@ -53,7 +53,8 @@
     <!-- Action buttons -->
     <div class="col-auto d-flex align-items-start">
       <a id="details-link" href="#" class="btn btn-primary me-2">Full Details</a>
-      <a href="{% url 'plugins:praksis_nhn_nautobot:samband_client_map' %}" class="btn btn-outline-secondary">Back to Map</a>
+      <a href="{% url 'plugins:praksis_nhn_nautobot:samband_list' %}" class="btn btn-outline-secondary">Back to List</a>
+      <a id="graph-link" href="#" class="btn btn-outline-secondary">Graph</a>
     </div>
   </div>
 
@@ -358,6 +359,7 @@ document.addEventListener('DOMContentLoaded', function() {
     
     // Update detail link
     document.getElementById('details-link').href = `/plugins/praksis-nhn-nautobot/samband/${connectionId}/`;
+    document.getElementById('graph-link').href = `/plugins/praksis-nhn-nautobot/samband/${connectionId}/graph/`;
     
     // Find point features to get categories for proper icons
     const pointAFeature = data.features?.find(f => f.type === 'point' && f.point_type === 'A');
