Small change in the urls

--- a/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/focus_graph.html
+++ b/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/focus_graph.html
@@ -90,6 +90,9 @@
         <div id="network-container" style="height: 600px; width: 100%;"></div>
 
         <div class="text-center" style="margin-top: 20px;">
+          <a href="{% url 'plugins:praksis_nhn_nautobot:samband' object.pk %}" id="view-samband-detail-btn" class="btn btn-secondary" style="margin-right: 10px;">
+            <span class="glyphicon glyphicon-list"></span> View Samband in detail
+          </a>
           <a href="#" id="view-table-btn" class="btn btn-secondary" style="margin-right: 10px;">
             <span class="glyphicon glyphicon-list"></span> View selection in table
           </a>
