--- a/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/network_graph.html
+++ b/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/network_graph.html
@@ -82,10 +82,10 @@
         <div id="network-container" style="height: 600px; width: 100%;"></div>
 
         <div class="text-center" style="margin-top: 20px;">
-          <a href="#" id="view-table-btn" class="btn btn-secondary" style="margin-right: 10px;">
+          <a href="{{ table_url }}" id="view-table-btn" class="btn btn-secondary" style="margin-right: 10px;">
             <span class="glyphicon glyphicon-list"></span> View selection in table
           </a>
-          <a href="#" id="view-map-btn" class="btn btn-secondary">
+          <a href="{{ map_url }}" id="view-map-btn" class="btn btn-secondary">
             <span class="glyphicon glyphicon-map-marker"></span> View selection in map
           </a>
         </div>
