--- a/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/network_graph.html
+++ b/praksis_nhn_nautobot/templates/praksis_nhn_nautobot/network_graph.html
@@ -5,8 +5,16 @@
 <div class="row">
   <div class="col-md-12">
     <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">Graph view</h3>
+      <div class="panel-heading" style="display: flex; justify-content: space-between; align-items: center;">
+        <h3 class="panel-title" style="margin: 0;">Graph view</h3>
+        <div>
+          <a href="{% url 'plugins:praksis_nhn_nautobot:samband_list' %}?{{ request.GET.urlencode }}" id="view-table-btn" class="btn btn-secondary" style="margin-right: 10px;">
+            <span class="glyphicon glyphicon-list"></span> View selection in table
+          </a>
+          <a href="{% url 'plugins:praksis_nhn_nautobot:samband_client_map' %}?{{ request.GET.urlencode }}" id="view-map-btn" class="btn btn-secondary">
+            <span class="glyphicon glyphicon-map-marker"></span> View selection in map
+          </a>
+        </div>
       </div>
       <div class="panel-body">
         <!-- Label Configuration Toolbox -->
@@ -82,12 +90,16 @@
         <div id="network-container" style="height: 600px; width: 100%;"></div>
 
         <div class="text-center" style="margin-top: 20px;">
-          <a href="#" id="view-table-btn" class="btn btn-secondary" style="margin-right: 10px;">
-            <span class="glyphicon glyphicon-list"></span> View selection in table
-          </a>
-          <a href="#" id="view-map-btn" class="btn btn-secondary">
-            <span class="glyphicon glyphicon-map-marker"></span> View selection in map
-          </a>
+          <div class="legend-container">
+            <div style="display: inline-block; margin-right: 15px;">
+              <span style="display: inline-block; width: 20px; height: 3px; background-color: #008000; vertical-align: middle; margin-right: 5px;"></span>
+              <span>Green (incoming) = Parent node</span>
+            </div>
+            <div style="display: inline-block;">
+              <span style="display: inline-block; width: 20px; height: 3px; background-color: #E53935; vertical-align: middle; margin-right: 5px;"></span>
+              <span>Red (outgoing) = Children node</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
